@@ -19,10 +19,10 @@
 
 package catlynet.tab;
 
+import catlynet.model.ReactionSystem;
 import catlynet.window.MainWindow;
 import javafx.collections.ObservableList;
 import javafx.scene.control.Tab;
-import javafx.scene.control.TextArea;
 
 import java.util.List;
 import java.util.Optional;
@@ -42,43 +42,35 @@ public class TabManager {
     }
 
     public void clearAll() {
-        tabs.stream().filter(t -> t.getUserData() instanceof TextTab).collect(Collectors.toList()).forEach(tabs::remove);
+        tabs.stream().filter(t -> t.getUserData() instanceof TextTab).toList().forEach(tabs::remove);
     }
 
     public void clear(String reactionSystemName) {
-        final Optional<Tab> tab = tabs.stream().filter(t -> t.getUserData() instanceof TextTab && ((TextTab) t.getUserData()).getReactionSystemName().equals(reactionSystemName)).findAny();
+        final Optional<Tab> tab = tabs.stream().filter(t -> t.getUserData() instanceof TextTab && ((TextTab) t.getUserData()).getName().equals(reactionSystemName)).findAny();
         tab.ifPresent(tabs::remove);
     }
 
-    public TextTab getTextTab(String reactionSystemName) {
-        final Optional<TextTab> tab = tabs.stream().filter(t -> t.getUserData() instanceof TextTab && ((TextTab) t.getUserData()).getReactionSystemName().equals(reactionSystemName)).map(t -> (TextTab) t.getUserData()).findAny();
+    public TextTab getTextTab(String name, ReactionSystem reactionSystem) {
+        final Optional<TextTab> tab = tabs.stream().filter(t -> t instanceof TextTab).map(t -> (TextTab) t).filter(t -> t.getName().equals(name)).findAny();
         if (tab.isPresent())
             return tab.get();
         else { // create new tab and add in alphabetical order
-			final TextTab textTab = new TextTab(mainWindow, reactionSystemName);
+            final TextTab textTab = reactionSystem != null ? new ReactionSystemTab(mainWindow, reactionSystem) : new TextTab(mainWindow, name);
             boolean added = false;
             for (int i = 0; !added && i < tabs.size(); i++) {
                 final Tab current = tabs.get(i);
-                if (current.getUserData() instanceof TextTab && textTab.getReactionSystemName().compareTo(((TextTab) current.getUserData()).getReactionSystemName()) < 0) {
-                    tabs.add(i, textTab.getTab());
+                if (current instanceof TextTab currentTextTab && textTab.getName().compareTo(currentTextTab.getName()) < 0) {
+                    tabs.add(i, textTab);
                     added = true;
                 }
             }
             if (!added)
-                tabs.add(textTab.getTab());
+                tabs.add(textTab);
             return textTab;
         }
     }
 
-    public Tab getTab(String reactionSystemName) {
-        return getTextTab(reactionSystemName).getTab();
-    }
-
-    public TextArea getTextArea(String reactionSystemName) {
-        return getTextTab(reactionSystemName).getTextArea();
-    }
-
     public List<TextTab> textTabs() {
-        return tabs.stream().filter(t -> t.getUserData() instanceof TextTab).map(t -> (TextTab) t.getUserData()).collect(Collectors.toList());
+        return tabs.stream().filter(t -> t instanceof TextTab).map(t -> (TextTab) t).collect(Collectors.toList());
     }
 }
